--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Домашняя бухгалтерия</title>
+  <title>Home accounting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
